# APE-HOI4-Tool-Studio

./: CMakeLists.txt  LICENSE  README.md
docs/: Modular_Tool_System_Implementation_Outline.md
resources/: openSource.json  resources.qrc  windows_icon.rc
resources/UserAgreement/: en_US.md  version.json  zh_CN.md  zh_TW.md
resources/advertisement/: url.json
resources/localization/en_US/: AccountPage.json  Advertisement.json  Common.json  ConfigPage.json  ConnectionWarning.json  Error.json  LoginDialog.json  MainWindow.json  SettingsPage.json  SetupDialog.json  ToolsPage.json  Update.json  UserAgreement.json
resources/localization/zh_CN/: AccountPage.json  Advertisement.json  Common.json  ConfigPage.json  ConnectionWarning.json  Error.json  LoginDialog.json  MainWindow.json  SettingsPage.json  SetupDialog.json  ToolsPage.json  Update.json  UserAgreement.json
resources/localization/zh_TW/: AccountPage.json  Advertisement.json  Common.json  ConfigPage.json  ConnectionWarning.json  Error.json  LoginDialog.json  MainWindow.json  SettingsPage.json  SetupDialog.json  ToolsPage.json  Update.json  UserAgreement.json
setup/: Setup.cpp  Setup.h  main.cpp
setup/localization/: en_US.json  zh_CN.json  zh_TW.json
src/: AccountPage.cpp  AccountPage.h  Advertisement.cpp  Advertisement.h  ConfigManager.cpp  ConfigManager.h  ConfigPage.cpp  ConfigPage.h  CustomMessageBox.cpp  CustomMessageBox.h  FileManager.cpp  FileManager.h  LoadingOverlay.cpp  LoadingOverlay.h  LocalizationManager.cpp  LocalizationManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  PathValidator.cpp  PathValidator.h  RecursiveFileSystemWatcher.cpp  RecursiveFileSystemWatcher.h  SettingsPage.cpp  SettingsPage.h  SetupDialog.cpp  SetupDialog.h  TagManager.cpp  TagManager.h  ToolDescriptorParser.cpp  ToolDescriptorParser.h  ToolHostMode.cpp  ToolHostMode.h  ToolInterface.h  ToolIpcProtocol.h  ToolManager.cpp  ToolManager.h  ToolProxyInterface.cpp  ToolProxyInterface.h  (+7 more)
tools/FileManagerTool/: FileManagerTool.h  descriptor.apehts  metadata.json
tools/FlagManagerTool/: FlagManagerTool.h  descriptor.apehts  metadata.json
tools/LogManagerTool/: LogManagerTool.cpp  LogManagerTool.h  descriptor.apehts
tools/LogManagerTool/localization/: en_US.json  zh_CN.json  zh_TW.json
updater/: main.cpp
